--- a/HarjKirjanpito/index.html
+++ b/HarjKirjanpito/index.html
@@ -10,5 +10,10 @@ and open the template in the editor.
     </head>
     <body>
         <div>TODO write content Testi toimiiko? Testataan vielä kerran ennen kuin uskotaan</div>
+
+        <form action="haku.php" method="haku">
+            <input type="submit" value="Hae Tiedot">
+        </form>
+
     </body>
 </html>
