Koulun koneelle kopiointi

--- a/HarjKirjanpito/index.html
+++ b/HarjKirjanpito/index.html
@@ -9,7 +9,8 @@ and open the template in the editor.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <div>TODO write content Testi toimiiko? Testataan vielä kerran ennen kuin uskotaan</div>
+        <div>TODO write content Testi toimiiko? Testataan vielä kerran ennen kuin uskotaan. <br>
+        Miten koulun koneelta tekstin lisääminen toimii.. </div>
 
         <form action="haku.php" method="haku">
             <input type="submit" value="Hae Tiedot">
