--- a/HarjKirjanpito/index.html
+++ b/HarjKirjanpito/index.html
@@ -1,20 +1,22 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-        <div>TODO write content Testi toimiiko? Testataan vielä kerran ennen kuin uskotaan. <br>
-        Miten koulun koneelta tekstin lisääminen toimii.. </div>
+        <title>Harjoituskirjanpitojärjestelmä</title>
 
-        <form action="haku.php" method="haku">
-            <input type="submit" value="Hae Tiedot">
-        </form>
+    </head>
+
+
+    <body>
+        <h1>Harjoituskirjanpitojärjestelmä</h1>
+
+        <div> 
+            <a href="sisaankirjaus.php">Sisäänkirjautuminen</a>
+        </div>
 
     </body>
+
+
+
+
 </html>
