--- a/HarjKirjanpito/index.html
+++ b/HarjKirjanpito/index.html
@@ -11,7 +11,7 @@
         <h1>Harjoituskirjanpitojärjestelmä</h1>
 
         <div> 
-            <a href="kirjautuminen/sisaankirjaus.php">Sisäänkirjautuminen</a>
+            <a href="sisaankirjaus.php">Sisäänkirjautuminen</a>
         </div>
 
     </body>
