--- a/HarjKirjanpito/index.html
+++ b/HarjKirjanpito/index.html
@@ -1,8 +1,11 @@
+<!-- Index-sivu Harjoituskirjanpitojärjestelmälle. Sivulta pääsee etenemään 
+    järjestelmän kirjautumissivulle.-->
+
 <!DOCTYPE html>
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="tyylitiedostot/linkkilistaTyyli.css" />
+        <link rel="stylesheet" type="text/css" href="tyylitiedostot/tyylit.css" />
         <title>Harjoituskirjanpitojärjestelmä</title>
 
     </head>
